<resources>
    <string name="app_name">Flashtr</string>
    <string name="app_image_folder">Flashtr Images</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verify_code">VerifyCodeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_new_album">NewAlbumActivity</string>

    <string name="back_press">please press back again to exit</string>
    <string name="title_activity_select_album">SelectAlbumActivity</string>

    <string name="no_shared_pics">No Shared Pics</string>
    <string name="no_recent_pics">No Recent Pics</string>
    <string name="no_internet">No network connection</string>
    <string name="photos_awaiting">photos awaiting your permission</string>

    <string name="change_album">Change Album</string>
    <string name="change_view">Change View Style\nGrid/List</string>
    <string name="swipe_open_camera">Swipe to Open Camera</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="upload_album">Upload to Album</string>
    <string name="gallery">Gallery</string>

    <string name="str_loadingMsg">Loading...</string>
    <string name="str_close">Close</string>

    <string name="str_new_header1">FLASHTR LOGIN</string>
    <string name="str_new_login1">Enter Your Mobile Number</string>
    <string name="str_mobile_hint">eg: 9099090990</string>
    <string name="str_next">NEXT</string>
    <string name="str_new_EnterAlbumName">Ex: Best moments, Cheers...!,Happy Holi</string>
    <string name="str_new_header2">CODE VERIFICATION</string>
    <string name="str_new_login2">Enter Confirmation Code</string>
    <string name="str_verify_hint">Enter Verificaition Code</string>
    <string name="str_back">Back</string>
    <string name="str_resend">Resend</string>
    <string name="str_new_header3">PROFILE</string>
    <string name="str_new_name">Name</string>
    <string name="str_new_email_optional">Email (Optional)</string>
    <string name="str_new_submit">SUBMIT</string>
    <string name="str_new_header4">SETTINGS</string>
    <string name="str_new_header5">CREATE NEW ALBUM</string>
    <string name="str_new_header6">UPDATE ALBUM</string>
    <string name="str_new_header7">FAVOUITE PHOTOS</string>
    <string name="str_new_acc">ACCOUNT</string>
    <string name="str_new_abt">ABOUT</string>
    <string name="str_new_help">HELP</string>
    <string name="str_new_general">FLASHTR</string>
    <string name="str_new_edit_prof">[Edit Profile]</string>
    <string name="str_new_update_num">Update Mobile Number</string>
    <string name="str_new_feedback">Feedback</string>
    <string name="str_new_tips">Tips</string>
    <string name="str_new_contactus">Contact Us</string>
    <string name="str_new_version">Version</string>
    <string name="str_new_terms">Terms &amp; Condition</string>
    <string name="str_new_shApp">Share Application</string>
    <string name="str_new_rateApp">Rate Application</string>
    <string name="str_new_album_name">Album Name</string>
    <string name="str_loadMore">Load more</string>
    <string name="str_take_photo">Take photo from</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>

</resources>
