<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="fill_parent"
        android:layout_height="55dp">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/background_color"
            android:orientation="horizontal">

            <!--<RelativeLayout
                android:id="@+id/rlTopLogo"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@color/yellow">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rlLogo"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false" />

                    </LinearLayout>
                </com.balysv.materialripple.MaterialRippleLayout>
            </RelativeLayout>-->

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/rlAlbumHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mrl_rippleBackground="@color/nRippleHeaderBG"
                app:mrl_rippleColor="@color/nRippleColor">

                <TextView
                    android:id="@+id/tvSelectAlbum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/rlLogo"
                    android:text="@string/str_new_header3"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </com.balysv.materialripple.MaterialRippleLayout>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llTop"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlimgProfile"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <com.flashtr.util.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop" />

            <com.flashtr.util.CircleImageView
                android:id="@+id/imgStaticProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile" />

            <RelativeLayout
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgProfile"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rounded_gray">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/mlEditProfile"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true">

                    <ImageView
                        android:id="@+id/ivEditProfileImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:src="@drawable/edit_profile" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </RelativeLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/rlProfile"
                android:layout_weight="1.0"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:id="@+id/rlName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/str_new_name"
                        android:inputType="textCapWords"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/nTextHint_color_grey" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/gray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlemail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/rlName"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/str_new_email_optional"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/nTextHint_color_grey" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/gray" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:gravity="center_horizontal|center"
                android:orientation="vertical">

                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/rlSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:mrl_rippleBackground="@color/nText_color_orange"
                    app:mrl_rippleColor="@color/nRippleColor">

                    <com.flashtr.util.SegoeuiTextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="13dp"
                        android:text="@string/str_new_submit"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
